--- a/main.html
+++ b/main.html
@@ -9,6 +9,12 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+		function displayHelloWorld() {
+      alert("Hello World!");
+    }
+
+    // Call the function to display the alert
+    displayHelloWorld();
 </script>
 
 </body>
